<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ultra"
        android:layout_marginTop="@dimen/large"
        android:layout_weight="1"
        android:padding="@dimen/small"
        android:src="@drawable/ekameno"
        />
    <!--    <TextView
            android:id="@+id/title"
            android:paddingTop="@dimen/large"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="eKameno"
            android:textSize="@dimen/ultraTitleText"
            android:textColor="@color/black"/>-->

    <TextView
        android:id="@+id/eKsubtitle"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SystemNotFound"
        android:textColor="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eKsubtitle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/small"
            android:paddingLeft="@dimen/xlarge"
            android:paddingRight="@dimen/xlarge" >

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:paddingTop="@dimen/small" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reply String for command:" />

                    <EditText
                        android:id="@+id/configItem1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/DemoReplyString"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/xxxlarge"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:paddingTop="@dimen/small"
                android:paddingLeft="@dimen/xxlarge"
                android:paddingRight="@dimen/xxlarge" >

                <Button
                    android:id="@+id/actionButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/SystemNotFoundButton" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>